# ip-locator

./: .dockerignore  .env.example  .gitignore  DEVELOPMENT_NOTES.md  Dockerfile  README.md  check_flow.py  pyproject.toml
app/: dependencies.py  main.py
app/core/: __init__.py  config.py  exceptions.py  log.py
app/models/: errors.py  geo.py
app/providers/: __init__.py  base.py  factory.py
app/providers/implementations/: __init__.py  ip_api.py  ipapi_co.py  maxmind.py
app/routers/: geo.py
tests/: conftest.py  test_dependencies.py  test_factory.py  test_geo_router.py  test_ip_api_provider.py  test_ipapi_co_provider.py
